<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/cardviewOnboarding"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/textOnboardingTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="left"
                        android:text="@string/onboarding_title"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                    <TextView
                        android:id="@+id/textOnboardingDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textOnboardingTitle"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="left"
                        android:text="@string/onboarding_desc"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                    <Button
                        android:id="@+id/buttonGotIt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/textOnboardingDesc"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="5dp"
                        android:text="Got it" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardviewDaily"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/textDailyTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="left"
                        android:text="@string/daily_goal_title"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                    <TextView
                        android:id="@+id/textDailyDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textDailyTitle"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="left"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                    <Button
                        android:id="@+id/buttonShareDaily"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/textDailyDesc"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/action_share" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardviewSpree"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/textSpreeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="left"
                        android:text="@string/spree_goal_title"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                    <TextView
                        android:id="@+id/textSpreeDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textSpreeTitle"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="left"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                    <Button
                        android:id="@+id/buttonShareSpree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/textSpreeDesc"
                        android:layout_marginBottom="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/action_share" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardviewError"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ImageView

                        android:id="@+id/imageError"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_action_mood_bad" />

                    <TextView
                        android:id="@+id/textErrorContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageError"
                        android:layout_margin="5dp"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardviewNoActivity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/imageRun"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_action_directions_run" />

                    <TextView
                        android:id="@+id/textNoActivityContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageRun"
                        android:layout_margin="5dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/no_activity_desc"
                        android:gravity="center"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
